--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
 
 /* brand color palette */
 :root {
-  --primary: rgba(68, 88, 119, 1);
-  --secondary: rgba(146, 204, 206, 1);
-  --tertiary: rgba(49, 52, 61, 1);
+  --primary: rgb(90, 124, 163);
+  --tertiary: rgb(76, 133, 218);
   --dark: rgba(28, 29, 33, 1);
   --light: rgba(238, 238, 247, 1);
 }
@@ -62,7 +61,7 @@ nav {
 nav a {
   text-decoration: none;
   padding: 5px 10px;
-  color: var(--secondary);
+  color: black;
   margin-right: 10px;
   background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
   background-repeat: no-repeat;
@@ -87,7 +86,7 @@ main {
 }
 
 .hero-banner {
-  background: rgb(68, 88, 120);
+  background: rgb(192,192,192);
   background-image: url("../images/02-hero-bg.jpg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
   background-size: cover;
   background-position: center;
@@ -107,7 +106,7 @@ main {
 
 .hero-banner h2 {
   background-color: var(--secondary);
-  color: var(--tertiary);
+  color: black;
   margin: 0;
   padding: 5px 10px;
   font-size: 2.3rem;
@@ -129,6 +128,7 @@ main {
   flex-wrap: wrap;
   align-items: stretch;
   justify-content: space-between;
+  color: black
 }
 
 .page-section > h2 {
@@ -154,6 +154,20 @@ main {
   justify-content: center;
 }
 
+#trivia{
+  background-image: url("triviaQuiz.png");
+  background-size:100%;
+}
+
+#weather-dashboard{
+  background-image: url("Image\ 1-9-22\ at\ 10.46\ AM.jpg");
+  background-size:100%;
+}
+
+#Good_Readme{
+  background-image: url("Screen\ Shot\ 2022-01-09\ at\ 10.54.44\ AM.png");
+  background-size:100%;
+}
 .flex-item {
   border: 5px solid var(--secondary);
   background-color: var(--primary);
@@ -162,6 +176,7 @@ main {
   max-height: 150px;
   flex-basis: calc(50% - 1em);
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
   padding: 0 0 20px 0;
   margin: 0.5em;
